kuber-homeworks/2.3/task2/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx
  labels:
    app: task2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task2
  template:
    metadata:
      labels:
        app: task2
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: configmap-nginx-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: configmap-nginx-volume
        configMap:
          name: configmap-nginx
