kuber-homeworks/2.3/task2/svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  selector:
    app: task2
  ports:
  - name: http-nginx
    port: 80
    protocol: TCP
    targetPort: 80
